# img2icon

./: CHANGELOG.md  CMakeLists.txt  README.md  img2icon.cpp
.github/workflows/: quality_security.yml
configure/: CMakeLists.txt  rz_config.hpp.in
include/: rz_config.hpp
